--- a/app/client/package.json
+++ b/app/client/package.json
@@ -2,6 +2,7 @@
     "name": "client",
     "version": "0.1.0",
     "private": true,
+    "proxy": "http://localhost:5000",
     "dependencies": {
         "axios": "^0.19.0",
         "classnames": "^2.2.6",
@@ -19,8 +20,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "proxy": "http://localhost:5000"
+        "eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": "react-app"
