--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "node ./app/server/server.js",
         "server": "nodemon ./app/server/server.js",
         "client": "npm start --prefix ./app/client/",
-        "dev": "concurrently \"npm run server\" \"npm run client\""
+        "dev": "concurrently --kill-others-on-fail \"npm run client\" \"npm run server\""
     },
     "repository": {
         "type": "git",
@@ -19,7 +19,6 @@
     "bugs": {
         "url": "https://github.com/mauricechristopher/Matcha/issues"
     },
-    "homepage": "https://github.com/mauricechristopher/Matcha#readme",
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
